completed dog model, controller, user devise view, dog profile creation and update

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,4 +1,7 @@
 // Define variables for your color scheme
+$darkgreen: #044E49;
+$lightblue: #8FCECA;
+$lightred: #D1665F;
 
 // For example:
 $red: #FD1015;
