--- a/app/views/dogs/edit.html.erb
+++ b/app/views/dogs/edit.html.erb
@@ -13,7 +13,7 @@
       <%= f.input :neutered, :collection => %w[Yes No]%>
       <%= f.input :suburb %>
       <%= f.input :photo, as: :file %>
-      <%= f.submit 'Save', class: "btn btn-primary" %>
+      <%= f.submit 'Save', class: "btn-green" %>
     <% end %>
   </div>
 </div>
