--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -1,25 +1,15 @@
-<h1>Dogs#index</h1>
 <div class="container px-4 py-5">
+  <h1 class="pb-2 border-bottom">Dogs</h1>
   <div class="row">
     <% @dogs.each do |dog| %>
-    <div class="card mx-3 my-3 zoom" style="width: 18rem;">
+    <div class="card mx-3 my-3 zoom" style="width: 250px;">
       <%= link_to dog_path(dog) do %>
-      <%= cl_image_tag dog.photo.key %>
+      <%= cl_image_tag dog.photo.key, height: 200, width: 248, crop: :fill %>
       <% end %>
-      <div class="card-body text-center d-flex flex-column justify-content-between">
-        <h5 class="card-title"><%= dog.name %></h5>
-        <p>Age:
-        <% if dog.birth_month.nil? %>
-          <%= 0 %>
-        <% else %>
-          <%= Date.today.month - dog.birth_month %>
-        <% end %>m
-        <% if dog.birth_year.nil? %>
-          <%= 0 %>
-        <% else %>
-          <%= Date.today.year - dog.birth_year %>
-        <% end %>y
-        </p>
+      <div class="card-body text-center">
+        <h4 class="card-title"><strong><%= dog.name %></strong></h4>
+        <p class="text-muted">from <%= dog.suburb %></p>
+        <p><i class="fas fa-walking"></i> <strong><%= dog.user.first_name %></strong></p>
       </div>
     </div>
     <% end %>
