--- a/app/views/dogs/show.html.erb
+++ b/app/views/dogs/show.html.erb
@@ -1,3 +1,30 @@
-<h1>Dogs#show</h1>
-<%= cl_image_tag @dog.photo.key %>
-<p>Find me in app/views/dogs/show.html.erb</p>
+<div class="container px-4 py-5">
+  <div class="row">
+    <div class="card mx-3 my-3" style="width: 250px;">
+      <%= cl_image_tag @dog.photo.key, height: 200, width: 248, crop: :fill %>
+      <div class="card-body text-center">
+        <h5 class="card-title"><strong><%= @dog.name %></strong></h5>
+        <p class="text-muted">Lives with <strong><%= @dog.user.first_name %></strong> in <%= @dog.suburb %></p>
+        <p>Age:
+        <% if @dog.birth_month.nil? %>
+          <%= 0 %>
+        <% else %>
+          <%= Date.today.month - @dog.birth_month %>
+        <% end %>m
+        <% if @dog.birth_year.nil? %>
+          <%= 0 %>
+        <% else %>
+          <%= Date.today.year - @dog.birth_year %>
+        <% end %>y
+        </p>
+        <p>Gender: <%= @dog.gender %></p>
+        <p>Size: <%= @dog.size %></p>
+        <p>Breed: <%= @dog.breed %></p>
+        <p>Energy Level: <%= @dog.energy_level %></p>
+        <p>Vaccinated: <%= @dog.vaccinated %></p>
+        <p>Neutered: <%= @dog.neutered %></p>
+      </div>
+      <%= link_to "Message #{@dog.user.first_name}", class: "btn-green" %>
+    </div>
+  </div>
+</div>
