--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,14 @@
-.navbar-lewagon {
-  justify-content: space-between;
-  background: white;
+.bottom-nav {
+  background-color: $darkgreen;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 }
 
-.navbar-lewagon .navbar-collapse {
-  flex-grow: 0;
-}
+.nav-items {
 
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
+  .nav-item {
+    display: inline-block;
+    list-style-type: none;
+  }
 }
