--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -3,12 +3,16 @@
   position: fixed;
   bottom: 0;
   width: 100%;
+  height: 6%;
 }
 
 .nav-items {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 
   .nav-item {
-    display: inline-block;
-    list-style-type: none;
+    color: #fff;
+    font-size: 2rem;
   }
 }
