--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,26 @@
-<h1>Pages#home</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Hellodog | The most efficient way for your dog to socialise</title>
+     <meta name="Home Page" content="Socialise your dog. Hellodog is the most efficient way for your dog to socialise">
+    <meta charset="utf-8">
+  </head>
 
-<p>Find me in app/views/pages/home.html.erb</p>
+  <body>
+    <div class="container">
+      <img src="logo.png" class="logo"  alt="Hellodog logo">
+        <div class="card1" id="Introduction">
+          <p>The most efficient way for your dog to socialise.</p>
+        <a href="#" class="btn-search">Meet our dogs</a>
+    </div>
+    <div>
+      <ul class="list-inline" id="navigation-bar">
+        <li><img src="logo.png" a href="#">Calendar</a></li>
+        <li><img src="logo.png" a href="#">Search</a></li>
+        <li><img src="logo.png" a href="#">Message</a></li>
+        <li><img src="logo.png" a href="#">Profile</a></li>
+      </ul>
+    </div>
+  </body>
+</html>
+<!-- end of file -->
