added icon nav bar, background image and hover abilities

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,12 @@
-.navbar-lewagon {
+.bar-lewagon {
   justify-content: space-between;
   background: white;
 }
 
-.navbar-lewagon .navbar-collapse {
+.bar-lewagon .bar-collapse {
   flex-grow: 0;
 }
 
-.navbar-lewagon .navbar-brand img {
+.bar-lewagon .bar-brand img {
   width: 40px;
 }
