--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,25 +1,29 @@
+
 <!DOCTYPE html>
 <html>
   <head>
     <title>Hellodog | The most efficient way for your dog to socialise</title>
      <meta name="Home Page" content="Socialise your dog. Hellodog is the most efficient way for your dog to socialise">
-    <meta charset="utf-8">
+      <meta charset="utf-8">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
 
   <body>
     <div class="container">
-      <img src="logo.png" class="logo"  alt="Hellodog logo">
-        <div class="card1" id="Introduction">
-          <p>The most efficient way for your dog to socialise.</p>
-        <a href="#" class="btn-search">Meet our dogs</a>
+      <div img src="hellodog_logo.jpg" alt="logo">
+        <div class="hero-image">
+          <div class="hero-text">
+            <h1 style="font-size:15px">The most efficient way for your dog to socialise</h1>
+            <a href="#" class="btn-search">Meet our dogs</a>
+          </div>
+        </div>
+      </div>
     </div>
-    <div>
-      <ul class="list-inline" id="navigation-bar">
-        <li><img src="logo.png" a href="#">Calendar</a></li>
-        <li><img src="logo.png" a href="#">Search</a></li>
-        <li><img src="logo.png" a href="#">Message</a></li>
-        <li><img src="logo.png" a href="#">Profile</a></li>
-      </ul>
+    <div class="icon-bar">
+      <a href="#"><i class="fas fa-calendar-alt"></i>
+      <a href="#"><i class="fa fa-search" aria-hidden="true"></i>
+      <a href="#"><i class="fa fa-comment" aria-hidden="true"></i>
+      <a href="#"><i class="fas fa-dog"></i>
     </div>
   </body>
 </html>
