added picture via cloudinary

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,13 +9,12 @@
   </head>
 
   <body>
-    <div class="container">
-      <div img src="hellodog_logo.jpg" alt="logo">
-        <div class="hero-image">
-          <div class="hero-text">
-            <h1 style="font-size:15px">The most efficient way for your dog to socialise</h1>
-            <a href="#" class="btn-search">Meet our dogs</a>
-          </div>
+    <div class="">
+      <img src="hellodog_logo.jpg" alt="logo">
+      <div class="hero-image">
+        <div class="hero-text">
+          <h1 style="font-size:15px">The most efficient way for your dog to socialise</h1>
+          <a href="#" class="btn-search">Meet our dogs</a>
         </div>
       </div>
     </div>
