--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,14 +1,14 @@
 // Specific CSS for your home-page
 /* Colors and fonts */
 body {
-  margin: 0;
+  margin: 0%;
   font-family: 'Roboto', sans-serif;
 }
 
 .hero-image {
   align-items: center;
   width: 100%;
-  background-image: url("dog_test.jpg");
+  background-image: url("https://res.cloudinary.com/mel0013/image/upload/v1639650414/hellodog/homepage_lyb1br.jpg");
   height: 500px;
   background-position: center;
   background-size: cover;
@@ -18,7 +18,7 @@ body {
     display: block;
     font-size: 5px;
     text-align: center;
-    margin-block-start: 0em;
+    margin-block-start: 2em;
     margin-block-end: 1em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
