added homepage logo

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,21 @@
-<h1>Pages#home</h1>
+<html>
+  <head>
+    <title>Hellodog | The most efficient way for your dog to socialise</title>
+     <meta name="Home Page" content="Socialise your dog. Hellodog is the most efficient way for your dog to socialise">
+      <meta charset="utf-8">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  </head>
 
-<p>Find me in app/views/pages/home.html.erb</p>
+  <body>
+    <div class="">
+      <img src="https://res.cloudinary.com/mel0013/image/upload/v1641458490/hellodog/hellodoglogo_s5ehe5.png" alt="logo">
+      <div class="hero-image">
+        <div class="hero-text">
+          <h1 style="font-size:15px">The most efficient way for your dog to socialise</h1>
+          <a href="#" class="btn-search">Meet our dogs</a>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
+<!-- end of file -->
