completed chatrooms and messages controller. Created green-header CSS class. Chatroom index/show in progress

--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container px-4 py-5">
-  <h1 class="pb-2 border-bottom">Dogs</h1>
+  <h1 class="pb-2 border-bottom green-header">Dogs</h1>
   <div class="row">
     <% @dogs.each do |dog| %>
     <div class="card mx-3 my-3 zoom rounded-corners" style="width: 250px;">
