--- a/app/views/dogs/edit.html.erb
+++ b/app/views/dogs/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="banner-list container py-5">
-  <h1 class="pb-2 border-bottom">Edit Dog Profile</h1>
+  <h1 class="pb-2 border-bottom green-header">Edit Dog Profile</h1>
   <div class="py-4">
     <%= simple_form_for(@dog) do |f| %>
       <%= f.input :name %>
