--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,7 +3,7 @@
     <% if user_signed_in? %>
       <%= link_to icon('fas', 'calendar-alt'), "#", class: "nav-item" %>
       <%= link_to icon('fas', 'search'),  dogs_path, class: "nav-item" %>
-      <%= link_to icon('fas', 'comments'), "#", class: "nav-item" %>
+      <%= link_to icon('fas', 'comments'), chatrooms_path, class: "nav-item" %>
       <%= link_to icon('fas', 'dog'), "#", class: "nav-item" %>
       <%= link_to icon('fas', 'sign-out-alt'), destroy_user_session_path, method: :delete, class: "nav-item" %>
     <% else %>
