--- a/app/views/chatrooms/index.html.erb
+++ b/app/views/chatrooms/index.html.erb
@@ -7,7 +7,11 @@
       <% else %>
         <p><%= link_to "#{chatroom.user1.first_name}", chatroom_path(chatroom) %></p>
       <% end %>
-      <p><%= chatroom.messages.last.content %></p>
+      <% if chatroom.messages.last.nil? %>
+        <p>No new messages</p>
+      <% else %>
+        <p><%= chatroom.messages.last.content %></p>
+      <% end %>
     <% end %>
   </div>
 </div>
