--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -7,9 +7,12 @@
   border-radius: 4px;
   border: 1px solid $darkgreen;
   box-shadow: 2px 4px 4px rgba($color: #000000, $alpha: 0.25);
+  text-decoration: none;
 }
 .btn-green:hover {
   background-color: #025e57;
+  color: whitesmoke;
+  text-decoration: none;
 }
 
 // Cancel button
