--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,38 @@
-// Specific CSS for your home-page
+.carousel-item active{
+object-fit: cover;
+}
+
+img.logo{
+  height: 24px;
+  width: 108px;
+//   position: absolute;
+//   margin: auto;
+//   display: block;
+//   left: 0;
+//   right: 0;
+}
+
+// h1 {
+//   $body-font:"Montserrat", "sans-serif";
+//   color: #0E0000;
+//   font-size: 20px;
+//   width: 100%;
+//   position: relative;
+//   text-align: center;
+// }
+
+.intro {
+position: absolute;
+top: 10px;
+z-index: 5;
+width: 80%;
+display: flex;
+flex-direction: column;
+justify-content: space-around;
+align-items: center;
+left: 30px;
+height: 30%;
+h1 {
+  width: 80%;
+}
+}
