--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,21 +1,33 @@
 <html>
   <head>
-    <title>Hellodog | The most efficient way for your dog to socialise</title>
-     <meta name="Home Page" content="Socialise your dog. Hellodog is the most efficient way for your dog to socialise">
-      <meta charset="utf-8">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
   </head>
 
   <body>
-    <div class="">
-      <img src="https://res.cloudinary.com/mel0013/image/upload/v1641458490/hellodog/hellodoglogo_s5ehe5.png" alt="logo">
-      <div class="hero-image">
-        <div class="hero-text">
-          <h1 style="font-size:15px">The most efficient way for your dog to socialise</h1>
-          <a href="#" class="btn-search">Meet our dogs</a>
-        </div>
+    <div id="ImageCarouselCSS" class="carousel slide" data-ride="carousel">
+      <div class="intro">
+        <img class="logo" src="https://res.cloudinary.com/mel0013/image/upload/v1641458490/hellodog/hellodoglogo_s5ehe5.png">
+        <h1 style="font-size:15px">The most effective way for your dog to socialise</h1>
+        <%= link_to "Meet Our Dogs", dogs_path, class: "btn-green" %>
       </div>
+      <ol class="carousel-indicators">
+          <li data-target="#ImageCarouselCSS" data-slide-to="0" class="active"></li>
+          <li data-target="#ImageCarouselCSS" data-slide-to="1"></li>
+          <li data-target="#ImageCarouselCSS" data-slide-to="2"></li>
+      </ol>
+
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="https://res.cloudinary.com/mel0013/image/upload/v1639650414/hellodog/homepage_lyb1br.jpg" class="d-block w-100" alt="Hero Picture">
+      </div>
+      <div class="carousel-item" style="width:100%">
+        <img src="https://c.stocksy.com/a/5DF800/z9/1965095.jpg" class="d-block w-100" alt="Dog Meets Friends">
+      </div>
+      <div class="carousel-item">
+        <img src="https://images.unsplash.com/photo-1612782729003-fef75680220e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8Z2lybCUyMGRvZ3xlbnwwfHwwfHw%3D&w=1000&q=80" class="d-block w-100" alt="Happy dogs Happy Owners">
+      </div>
+    </div>
     </div>
   </body>
 </html>
-<!-- end of file -->
