--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,38 +1,55 @@
+.carousel{
+  height: 100vh;
+}
 .carousel-item active{
-object-fit: cover;
+  object-fit: cover;
+}
+
+.carousel-item{
+  height: 100%;
+}
+
+.carousel-indicator {
+  position: absolute;
+}
+
+.carousel-indicators {
+    bottom: 41px;
+}
+
+.carousel-item-image{
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.carousel-inner {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+    height: 100%;
 }
 
 img.logo{
-  height: 24px;
-  width: 108px;
-//   position: absolute;
-//   margin: auto;
-//   display: block;
-//   left: 0;
-//   right: 0;
+  height: 50px;
+  width: 195px;
 }
-
-// h1 {
-//   $body-font:"Montserrat", "sans-serif";
-//   color: #0E0000;
-//   font-size: 20px;
-//   width: 100%;
-//   position: relative;
-//   text-align: center;
-// }
 
 .intro {
-position: absolute;
-top: 10px;
-z-index: 5;
-width: 80%;
-display: flex;
-flex-direction: column;
-justify-content: space-around;
-align-items: center;
-left: 30px;
-height: 30%;
-h1 {
-  width: 80%;
+  position: absolute;
+  top: 10px;
+  z-index: 5;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  height: 30%;
+  padding: 20px;
 }
+
+h1 {
+ text-align: center;
+ font-size: 19px;
 }
