--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,13 +19,15 @@
 
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="https://res.cloudinary.com/mel0013/image/upload/v1639650414/hellodog/homepage_lyb1br.jpg" class="d-block w-100" alt="Hero Picture">
+      <div class="carousel-item-image" style="
+    background-image: url('https://res.cloudinary.com/mel0013/image/upload/v1639650414/hellodog/homepage_lyb1br.jpg');" class="d-block w-100" alt="Hero Picture"></div>
       </div>
-      <div class="carousel-item" style="width:100%">
-        <img src="https://c.stocksy.com/a/5DF800/z9/1965095.jpg" class="d-block w-100" alt="Dog Meets Friends">
+      <div class="carousel-item" style="width:100%"><div class="carousel-item-image" style="
+    background-image: url('https://c.stocksy.com/a/5DF800/z9/1965095.jpg');"class="d-block w-100" alt="Dog Meets Friends"></div>
       </div>
-      <div class="carousel-item">
-        <img src="https://images.unsplash.com/photo-1612782729003-fef75680220e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8Z2lybCUyMGRvZ3xlbnwwfHwwfHw%3D&w=1000&q=80" class="d-block w-100" alt="Happy dogs Happy Owners">
+      <div class="carousel-item"><div class="carousel-item-image" style="
+    background-image: url('https://images.unsplash.com/photo-1601758176559-76c75ead317a?ixlib=rb-1.2.1&ixid=MnwxM[…]G90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=688&q=80');" class="d-block w-100" alt="Happy dogs Happy Owners">
+      </div>
       </div>
     </div>
     </div>
