--- a/app/views/invitations/index.html.erb
+++ b/app/views/invitations/index.html.erb
@@ -7,9 +7,13 @@
         <h4 class="card-title"><strong><%= invitation.address %></strong></h4>
         <p class="text-muted">from <%= invitation.details %></p>
         <p><i class="fas fa-walking"></i> <strong><%= invitation.user1.first_name %></strong></p>
+        <div class="toggleBtn">
         <%= invitation.status %>
+        </div>
+        <div class="statusHolder">
         <%= link_to "Accept", accept_invitation_path(invitation), method: :patch  %>
          <%= link_to "Decline", decline_invitation_path(invitation), method: :patch  %>
+         </div>
       </div>
     </div>
     <% end %>
