--- a/app/views/invitations/index.html.erb
+++ b/app/views/invitations/index.html.erb
@@ -4,7 +4,7 @@
   <h1 class="pb-2 border-bottom">Invitations</h1>
   <div class="row">
     <% @invitations.each do |invitation| %>
-    <div class="card mx-3 my-3 zoom rounded-corners mx-auto" style="width: 250px;">
+    <div class="card mx-3 my-3 zoom rounded-corners mx-auto" style="width: 250px; background-color: #FFFFFF;" id="<%= invitation.id %>">
       <div class="card-body text-center">
         <%= cl_image_tag invitation.user1.dog.photo.key, height: 200, width: 200, crop: :fill %>
         <h4 class="card-title"><strong><%= invitation.address %></strong></h4>
@@ -14,8 +14,14 @@
         <%= invitation.status %>
         </div>
         <div class="statusHolder">
-        <%= link_to "Accept", accept_invitation_path(invitation), method: :patch, :class => "btn-green", :onclick => 'alert("Test")' %>
-         <%= link_to "Decline", decline_invitation_path(invitation), method: :patch, :class => "btn-lightred", :onclick => 'location.href=location.href'%>
+        <% if invitation.status == "accepted"  %>
+            <%= link_to "Decline", decline_invitation_path(invitation), method: :patch, :class => "btn-lightred text-right"  %>
+        <% elsif invitation.status == "declined" %>
+            <%= link_to "Accept", accept_invitation_path(invitation), method: :patch, :class => "btn-green text-right", :id => "" %>
+        <% else %>
+        <%= link_to "Accept", accept_invitation_path(invitation), method: :patch, :class => "btn-green", :id => "" %>
+        <%= link_to "Decline", decline_invitation_path(invitation), method: :patch, :class => "btn-lightred"  %>
+        <% end %>
          </div>
       </div>
     </div>
