--- a/app/views/invitations/index.html.erb
+++ b/app/views/invitations/index.html.erb
@@ -7,12 +7,11 @@
     <div class="card mx-3 my-3 zoom rounded-corners mx-auto" style="width: 250px; background-color: #FFFFFF;" id="<%= invitation.id %>">
       <div class="card-body text-center">
         <%= cl_image_tag invitation.user1.dog.photo.key, height: 200, width: 200, crop: :fill %>
-        <h4 class="card-title"><strong><%= invitation.address %></strong></h4>
-        <p class="text-muted">from <%= invitation.details %></p>
+        <h4 class="card-title"><strong><%= invitation.status %></strong></h4>
+        <p class="text-muted"> <%= invitation.address %></p>
+        <p class="text-muted"> <%= invitation.details %></p>
+
         <p><i class="fas fa-walking"></i> <strong><%= invitation.user1.first_name %></strong></p>
-        <div class="toggleBtn">
-        <%= invitation.status %>
-        </div>
         <div class="statusHolder">
         <% if invitation.status == "accepted"  %>
             <%= link_to "Decline", decline_invitation_path(invitation), method: :patch, :class => "btn-lightred text-right"  %>
@@ -20,7 +19,7 @@
             <%= link_to "Accept", accept_invitation_path(invitation), method: :patch, :class => "btn-green text-right", :id => "" %>
         <% else %>
         <%= link_to "Accept", accept_invitation_path(invitation), method: :patch, :class => "btn-green", :id => "" %>
-        <%= link_to "Decline", decline_invitation_path(invitation), method: :patch, :class => "btn-lightred"  %>
+        <%= link_to "Delete", decline_invitation_path(invitation), method: :delete, :class => "btn-lightred"  %>
         <% end %>
          </div>
       </div>
