added new dog and updated favourites feature

--- a/app/views/dogs/show.html.erb
+++ b/app/views/dogs/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container px-4 py-5">
   <div class="row">
-    <div class="card mx-3 my-3" style="width: 250px;">
+    <div class="card mx-3 my-3 mx-auto" style="width: 250px;">
       <%= cl_image_tag @dog.photo.key, height: 200, width: 248, crop: :fill %>
       <div class="card-body text-center">
         <h5 class="card-title green-header"><strong><%= @dog.name %></strong></h5>
