--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -3,7 +3,7 @@
   <div class="row">
     <% @dogs.each do |dog| %>
     <%= link_to dog_path(dog) do %>
-    <div class="card mx-3 my-3 zoom rounded-corners" style="width: 250px;">
+    <div class="card mx-3 my-3 zoom rounded-corners mx-auto" style="width: 250px;">
       <%= cl_image_tag dog.photo.key, height: 200, width: 248, crop: :fill %>
       <% end %>
       <div class="card-body text-center">
