updated invitations vew and added like feature

--- a/app/views/invitations/index.html.erb
+++ b/app/views/invitations/index.html.erb
@@ -1,13 +1,13 @@
 
 
 <div class="container px-4 py-5">
-  <h1 class="pb-2 border-bottom">Invitations</h1>
+  <h1 class="pb-2 border-bottom green-header">Invitations</h1>
   <div class="row">
     <% @invitations.each do |invitation| %>
     <div class="card mx-3 my-3 zoom rounded-corners mx-auto" style="width: 250px; background-color: #FFFFFF;" id="<%= invitation.id %>">
       <div class="card-body text-center">
         <%= cl_image_tag invitation.user1.dog.photo.key, height: 200, width: 200, crop: :fill %>
-        <h4 class="card-title"><strong><%= invitation.status %></strong></h4>
+        <h4 class="card-title light-blue-text my-2"><strong><%= invitation.status.capitalize %></strong></h4>
         <p class="text-muted"> <%= invitation.address %></p>
         <p class="text-muted"> <%= invitation.details %></p>
 
