--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -4,10 +4,10 @@
     <% @dogs.each do |dog| %>
     <%= link_to dog_path(dog) do %>
     <div class="card mx-3 my-3 zoom rounded-corners mx-auto" style="width: 250px;">
-      <%= cl_image_tag dog.photo.key, height: 200, width: 248, crop: :fill %>
-      <% end %>
       <div class="card-body text-center">
-        <h4 class="card-title"><strong><%= dog.name %></strong>
+      <%= cl_image_tag dog.photo.key, height: 200, width: 200, crop: :fill %>
+      <% end %>
+        <h4 class="card-title light-blue-text my-2"><strong><%= dog.name %></strong>
         <%= link_to toggle_favorite_dog_path(dog), remote: true, method: :post do %>
         <div class="like-icon mx-2 <%= 'red' if current_user.favorited?(dog) %>" data-id="<%= dog.id %>"> <i class="fas fa-paw"></i></div>
         <% end %>
