--- a/app/views/invitations/index.html.erb
+++ b/app/views/invitations/index.html.erb
@@ -1,7 +1,7 @@
 
 
 <div class="container px-4 py-5">
-  <h1 class="pb-2 border-bottom">Invitations</h1>
+  <h1 class="pb-2 border-bottom green-header">Invitations</h1>
   <div class="row">
     <% @invitations.each do |invitation| %>
     <div class="card mx-3 my-3 zoom rounded-corners mx-auto" style="width: 250px; background-color: #FFFFFF;" id="<%= invitation.id %>">
