--- a/app/views/invitations/index.html.erb
+++ b/app/views/invitations/index.html.erb
@@ -10,6 +10,7 @@
         <h4 class="card-title light-blue-text my-2"><strong><%= invitation.status.capitalize %></strong></h4>
         <p class="text-muted"> <%= invitation.address %></p>
         <p class="text-muted"> <%= invitation.details %></p>
+        <p class="text-muted"> <%= invitation.date_time%></p>
 
         <p><i class="fas fa-walking"></i> <strong><%= invitation.user1.first_name %></strong></p>
         <div class="statusHolder">
