--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -7,13 +7,13 @@
       <div class="card-body text-center">
       <%= cl_image_tag dog.photo.key, height: 200, width: 200, crop: :fill %>
       <% end %>
-        <h4 class="card-title light-blue-text my-2"><strong><%= dog.name %></strong>
+        <h4 class="card-title green-header my-2"><strong><%= dog.name %></strong>
         <%= link_to toggle_favorite_dog_path(dog), remote: true, method: :post do %>
-        <div class="like-icon mx-2 <%= 'red' if current_user.favorited?(dog) %>" data-id="<%= dog.id %>"> <i class="fas fa-paw"></i></div>
+        <div class="like-icon mx-2 light-blue-text <%= 'red' if current_user.favorited?(dog) %>" data-id="<%= dog.id %>"> <i class="fas fa-paw "></i></div>
         <% end %>
         </h4>
         <p class="text-muted">from <%= dog.suburb %></p>
-        <p><i class="fas fa-walking"></i> <strong><%= dog.user.first_name %></strong></p>
+        <p class="light-blue-text"><i class="fas fa-walking"></i> <strong><%= dog.user.first_name %></strong></p>
       </div>
     </div>
   <% end %>
