--- a/app/views/dogs/show.html.erb
+++ b/app/views/dogs/show.html.erb
@@ -1,10 +1,10 @@
 <div class="container px-4 py-5">
   <div class="row">
-    <div class="card mx-3 my-3 mx-auto" style="width: 250px;">
-      <%= cl_image_tag @dog.photo.key, height: 200, width: 248, crop: :fill %>
+    <div class="card mx-3 my-3 mx-auto rounded-corners" style="width: 300px;">
       <div class="card-body text-center">
-        <h5 class="card-title light-blue-text"><strong><%= @dog.name %></strong></h5>
-        <p class="text-muted">Lives with <strong><%= @dog.user.first_name %></strong> in <%= @dog.suburb %></p>
+      <%= cl_image_tag @dog.photo.key, height: 200, width: 248, crop: :fill %>
+        <h5 class="card-title green-header py-2 pb-2 border-bottom"><strong><%= @dog.name %></strong></h5>
+        <p class="light-blue-text">Lives with <strong><%= @dog.user.first_name %></strong> in <%= @dog.suburb %></p>
         <p>Age:
         <% if @dog.birth_month.nil? %>
           <%= 0 %>
