--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -4,18 +4,12 @@
     <% if current_user == @chatroom.user1 %>
       <%= @chatroom.user2.first_name %>
     <% else %>
-      <%= @hatroom.user1.first_name %>
+      <%= @chatroom.user1.first_name %>
     <% end %>
   </h1>
-  <div id="messages" data-chatroom-id="<%= @chatroom.id %>">
+   <div id="messages" data-chatroom-id="<%= @chatroom.id %>">
     <% @chatroom.messages.each do |message| %>
-      <div class="message-container" id="message-<%= message.id %>">
-        <i class="author text-muted">
-          <span><%= message.user.first_name%></span>
-          <small><%= message.created_at.strftime("%a %b %e at %l:%M%p") %></small>
-        </i>
-        <p><%= message.content %></p>
-      </div>
+      <%= render 'messages/message', message: message %>
     <% end %>
   </div>
 
