--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -9,7 +9,7 @@
       <% end %>
         <h4 class="card-title green-header my-2"><strong><%= dog.name %></strong>
         <%= link_to toggle_favorite_dog_path(dog), remote: true, method: :post do %>
-        <div class="like-icon mx-2 light-blue-text <%= 'red' if current_user.favorited?(dog) %>" data-id="<%= dog.id %>"> <i class="fas fa-paw "></i></div>
+        <div class="like-icon mx-2 light-blue-text <%= 'red' if current_user && current_user.favorited?(dog) %>" data-id="<%= dog.id %>"> <i class="fas fa-paw "></i></div>
         <% end %>
         </h4>
         <p class="text-muted">from <%= dog.suburb %></p>
