fixed age in month and updated dog seed

--- a/app/views/dogs/show.html.erb
+++ b/app/views/dogs/show.html.erb
@@ -9,7 +9,11 @@
         <% if @dog.birth_month.nil? %>
           <%= 0 %>
         <% else %>
-          <%= Date.today.month - @dog.birth_month %>
+          <% if @dog.birth_month > Date.today.month %>
+            <%= @dog.birth_month - Date.today.month %>
+          <% else %>
+            <%= Date.today.month - @dog.birth_month %>
+          <% end %>
         <% end %>m
         <% if @dog.birth_year.nil? %>
           <%= 0 %>
