--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -9,8 +9,8 @@
    <div id="banner-image" class="banner">
     <div class="dash-intro">
       <img class="banner-image" src="https://res.cloudinary.com/mel0013/image/upload/v1639650256/hellodog/banner_dashboard_wrp6p3.jpg">
-      <h1>HELLO FRED!</h1>
-      <style>@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');</style>
+      <div class= "welcome" >HELLO FRED!</h1>
+      <style> @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');</style>
     </div>
 
     <h2 style="font-size:px">Profile</h2>
