--- a/app/views/invitations/index.html.erb
+++ b/app/views/invitations/index.html.erb
@@ -6,13 +6,15 @@
     <% @invitations.each do |invitation| %>
     <div class="card mx-3 my-3 zoom rounded-corners mx-auto" style="width: 250px; background-color: #FFFFFF;" id="<%= invitation.id %>">
       <div class="card-body text-center">
+          <%= link_to dog_path(invitation.user2.dog) do  %>
         <%= cl_image_tag invitation.user1.dog.photo.key, height: 200, width: 200, crop: :fill %>
+    <% end %>
         <% if invitation.status == "pending"  %>
             <h4 class="card-title light-gray-text my-2"><strong><%= invitation.status.capitalize %></strong></h4>
           <% else invitation.status == "declined" %>
           <h4 class="card-title light-blue-text my-2"><strong><%= invitation.status.capitalize %></strong></h4>
         <% end %>
-
+        <p class="text-muted"> <%= invitation.date_time %></p>
         <p class="text-muted"> <%= invitation.address %></p>
         <p class="text-muted"> <%= invitation.details %></p>
 
