--- a/app/views/invitations/index.html.erb
+++ b/app/views/invitations/index.html.erb
@@ -12,7 +12,7 @@
         <h4 class="card-title light-blue-text my-2"><strong><%= invitation.status.capitalize %></strong></h4>
         <p class="text-muted"> <%= invitation.address %></p>
         <p class="text-muted"> <%= invitation.details %></p>
-        <p class="text-muted"> <%= invitation.date_time.strftime("%m/%d/%Y at %I:%M%p") %></p>
+        <p class="text-muted"> <%= invitation.date_time%></p>
 
         <p><i class="fas fa-walking"></i> <strong>USER 1<%= invitation.user1.first_name %></strong></p>
         <p><i class="fas fa-walking"></i> <strong>USER 2<%= invitation.user2.first_name %></strong></p>
