changes to styling

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -12,7 +12,7 @@
       <h1 class="welcome" >HELLO <%= @dog.name %>!</h1>
       </div>
 
-      <h2 class="pb-2 border-bottom green-header">Profile</h1></h2>
+      <h2 class="pb-2 border-bottomj green-header">Profile </h1></h2>
       <div class="card mx-3 my-3 zoom rounded-corners mx-auto" style="width: 400px;">
       <div class="card-body text-center">
         <%= cl_image_tag @dog.photo.key, height: 200, width: 248, crop: :fill %>
