--- a/app/views/invitations/index.html.erb
+++ b/app/views/invitations/index.html.erb
@@ -9,13 +9,16 @@
       <%= link_to dog_path(invitation.user2.dog) do %>
         <%= cl_image_tag invitation.user1.dog.photo.key, height: 200, width: 200, crop: :fill %>
         <% end %>
+      <% if invitation.status == "accepted"  %>
         <h4 class="card-title light-blue-text my-2"><strong><%= invitation.status.capitalize %></strong></h4>
+        <% else invitation.status == "pending" %>
+        <h4 class="card-title light-gray-text my-2"><strong><%= invitation.status.capitalize %></strong></h4>
+      <% end %>
+
         <p class="text-muted"> <%= invitation.address %></p>
         <p class="text-muted"> <%= invitation.details %></p>
         <p class="text-muted"> <%= invitation.date_time.strftime("%m/%d/%Y at %I:%M%p") %></p>
-
-        <p><i class="fas fa-walking"></i> <strong>USER 1<%= invitation.user1.first_name %></strong></p>
-        <p><i class="fas fa-walking"></i> <strong>USER 2<%= invitation.user2.first_name %></strong></p>
+        <p><i class="fas fa-walking"></i> <strong><%= invitation.user2.first_name %></strong></p>
         <div class="statusHolder">
         <% if invitation.status == "accepted"  %>
             <%= link_to "Decline", decline_invitation_path(invitation), method: :delete, :class => "btn-lightred text-right"  %>
