--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -38,3 +38,20 @@
   color: #025e57;
   text-decoration: none;
 }
+
+// Blue button
+.btn-lightblue {
+  padding: 10px 20px;
+  color: #fff;
+  // background-color: $lightblue;
+  background-image: linear-gradient(to right, #33bbb2 0%, #6dc5bf 51%, #8FCECA 100%);
+  // border: 2px solid white;
+  box-shadow: 0 4px 4px rgba($color: #000000, $alpha: 0.25);
+  border-radius: 10px;
+}
+
+.btn-lightblue:hover {
+  background-color: #1499aa;
+  color: whitesmoke;
+  text-decoration: none;
+}
