--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
       <div class="intro">
         <img class="logo" src="https://res.cloudinary.com/mel0013/image/upload/v1641458490/hellodog/hellodoglogo_s5ehe5.png">
         <h1>The most efficient way for your dog to socialise...</h1>
-        <%= link_to "Meet Our Dogs", dogs_path, class: "btn-green" %>
+        <%= link_to "Meet Our Dogs", dogs_path, class: "btn-lightblue zoom" %>
       </div>
       <ol class="carousel-indicators">
           <li data-target="#ImageCarouselCSS" data-slide-to="0" class="active"></li>
